# AutoRec-AI

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
.dvc/: config
Microservices/: docker-compose.yml
Microservices/App/API/: app.js  package-lock.json  package.json
Microservices/App/API/views/: home.ejs  results.ejs
Microservices/App/MS1/: Dockerfile
Microservices/App/MS1/ObjectDetection/: Detect.py  app.py
Microservices/App/MS2/: Dockerfile
Microservices/App/MS2/Classification/: Classify.py  app.py
Microservices/App/MS3/: Dockerfile
Microservices/App/MS3/RecommendationSystem/: app.py  data.db  recommendationengine.py
Monolith/: Detect.py  app.py  app.yaml  requirements.txt
autorec_ai/ingest/: config.py  ingestor.py  schema.py
autorec_ai/model/: car_match.py
autorec_ai/pipelines/: car_metadata_vectorization.py  data_ingestion.py  image_augmentation.py  train_mobilenet.py  train_test_split.py
autorec_ai/preprocessing/: image.py  metadata.py  split.py
autorec_ai/tests/model/: test_car_match.py
autorec_ai/train/: custom_mobilenet.py
autorec_ai/utils/: __init__.py  config.py  logger.py
data/: car_metadata.dvc  raw.dvc  raw_grouped_by_car_make_model_year.dvc
eda/: analysis.ipynb
processor_api/: Cargo.toml
